# rpmoci

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  SUPPORT.md  about.hbs  about.toml  deny.toml  renovate.json  rpmoci.toml
.github/: dependabot.yml
.github/actions/test/: action.yml
.github/workflows/: ci.yml  fedora.yml  release.yml
examples/: fedora35.toml
src/: archive.rs  cli.rs  config.rs  lib.rs  main.rs  oci.rs  sha256_writer.rs  subid.rs  write.rs
src/imager/: archive.rs  graph.py  layer.rs  mod.rs  nix_closure_graph.py
src/lockfile/: build.rs  download.py  download.rs  mod.rs  query_local.py  resolve.py  resolve.rs
tests/: it.rs
tests/fixtures/basearch/: rpmoci.toml
tests/fixtures/capabilities/: rpmoci.toml
tests/fixtures/etc_os_release_explicit/: rpmoci.toml
tests/fixtures/hardlinks/: rpmoci.toml
tests/fixtures/incompatible_lockfile/: rpmoci.toml
tests/fixtures/no_auto_etc_os_release/: rpmoci.toml
tests/fixtures/no_lockfile/: rpmoci.toml
tests/fixtures/rootless/: rpmoci.toml
tests/fixtures/simple_build/: rpmoci.toml
tests/fixtures/updatable_lockfile/: rpmoci.toml
tests/fixtures/update_from_lockfile/: rpmoci.toml
tests/fixtures/weakdeps/: rpmoci.toml
tests/init/old/: index.json  oci-layout
