[package]
name = "rpmoci"
version = "0.2.12"
edition = "2021"
description = "Build container images from RPMs"
# rpmoci uses DNF (via pyo3) which is GPLV2+ licensed,
# but uses Apache-2.0 licensed code compatible with GPL-3.0 but not GPL-2.0
license = "GPL-3.0-or-later"
documentation = "https://github.com/microsoft/rpmoci/blob/main/README.md"
homepage = "https://github.com/microsoft/rpmoci"
repository = "https://github.com/microsoft/rpmoci"

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.26", features = ["clock"], default-features = false }
clap = { version = "4.5.8", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
dirs = "5.0.1"
env_logger = "0.11.3"
filetime = "0.2.22"
flate2 = { version = "1.0.24", features = ["zlib"], default-features = false }
glob = "0.3.0"
log = "0.4.19"
nix = { version = "0.29.0", features = [
    "sched",
    "signal",
    "user",
], default-features = false }
oci-spec = { version = "0.6.3", features = ["image"], default-features = false }
openssl = "0.10.63"
pathdiff = "0.2.1"
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }
rpm = { version = "0.14.0", default-features = false }
rusqlite = "0.31.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
tar = "0.4.38"
tempfile = "3.8.0"
termcolor = "1.1.3"
toml = { version = "0.8.8" }
url = { version = "2.2.2", features = ["serde"] }
walkdir = "2.3.2"
xattr = "1.0.1"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rpmoci", dest = "/usr/bin/rpmoci", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/rpmoci/LICENSE", doc = true, mode = "0644" },
]
require-sh = false

[package.metadata.generate-rpm.requires]
dnf = "*"

[features]
# The "test-docker" feature is used to run integration tests requiring skopeo and docker
test-docker = []
