[package]
name = "rpmoci"
version = "0.3.1"
edition = "2021"
description = "Build container images from RPMs"
# rpmoci uses DNF (via pyo3) which is GPLV2+ licensed,
# but uses Apache-2.0 licensed code compatible with GPL-3.0 but not GPL-2.0
license = "GPL-3.0-or-later"
documentation = "https://github.com/microsoft/rpmoci/blob/main/README.md"
homepage = "https://github.com/microsoft/rpmoci"
repository = "https://github.com/microsoft/rpmoci"

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.26", features = ["clock"], default-features = false }
clap = { version = "4.5.6", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
env_logger = "0.11.3"
filetime = "0.2.22"
flate2 = { version = "1.0.24", features = ["zlib"], default-features = false }
glob = "0.3.0"
log = "0.4.19"
pathdiff = "0.2.1"
pyo3 = { version = "0.22.1", features = ["auto-initialize"] }
rpm = { version = "0.15.0", default-features = false }
rusqlite = "0.31.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
tar = "0.4.38"
tempfile = "3.8.0"
termcolor = "1.1.3"
toml = { version = "0.8.8" }
url = { version = "2.2.2", features = ["serde"] }
walkdir = "2.3.2"
xattr = "1.0.1"
ocidir = "0.2.1"

[dev-dependencies]
test-temp-dir = "0.2.2"
testcontainers = { version = "0.23.1", features = ["blocking"] }
testcontainers-modules = { version = "0.11.2", features = [
    "cncf_distribution",
] }


[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rpmoci", dest = "/usr/bin/rpmoci", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/rpmoci/LICENSE", doc = true, mode = "0644" },
]
require-sh = false

[package.metadata.generate-rpm.requires]
dnf = "*"


[features]
default = ["test-docker"]
# The "test-docker" feature is used to run integration tests requiring skopeo and docker
test-docker = []
